Development
    Fix bug in recent item selection
    Fix bug in streaming detection
    Make Show Controls and Fullscreen menu items to check boxes and keep in sync with right click menu
    Fix commandline parser to work with various arguments
    Fix issue in get_metadata where title was sometimes blank
    Implement / Fix more GIO stuff, if gvfs-fuse is installed we don't have to copy so try to
        use that first. Most functionality should be working now for GIO
    Folder drag and drop should now be working for remote shares, want to do async loading still
    Some GIO functionality is now working, still problems
    Start working on gio functionality, probably broken for many things
    Do much of the filename to uri conversion, gio still not implemented, probably bad bugs lurking
    Enabled gio-2.0 detection in configure
    Upgraded to automake 1.10.1
    Fix make dist so that rpmbuild works again
    Use the GCONF AutoMake macros
    Implement detection and usage of mplayer's new slave interface 'pausing_keep_force' which
        prevents frame advance when media is paused and a command is given.
    Change interface of send_command to know if we should keep media paused or not
    Implement phase 3 changes for making GCONF optional (feature should now be complete)
    Implement phase 2 changes for making GCONF optional
    Implement phase 1 changes for making GCONF optional
    Create workaround for MP3 media length bug
0.8.0
    Make recent documents menu only show the items gnome-mplayer can open
    Enable Copy URL menu, since we are in string freeze, I will not update this text until next release
    Add missing schema key
    Updated ko, fr and tr translations
    Updated Polish translation
    Set Left alignment in Playlist for Artist column
    Allow drag and drop of folders to main window and playlist and show status properly
    Add in progress status when adding folder