@@ -37,11 +37,18 @@ AC_SUBST(GTK2_12_DEFINES)
 PKG_CHECK_MODULES(GLIB2_14,[glib-2.0 >= 2.14.0],[GLIB2_14_DEFINES="-DGLIB2_14_ENABLED" AC_DEFINE([GLIB2_14_ENABLED],[1],[Define to 1 if you have GTK 2.12 or higher])],AC_MSG_NOTICE([Using slider for volume]))
 AC_SUBST(GLIB2_14_DEFINES)
 
-PKG_CHECK_MODULES(GIO,[gio-2.0],[GIO_DEFINES="-DGIO_ENABLED" AC_DEFINE([GIO_ENABLED],[1],[Define to 1 if you have GIO support])],)
-AC_SUBST(GIO_DEFINES)
-AC_SUBST(GIO_CFLAGS)
-AC_SUBST(GIO_LIBS)
-
+AC_ARG_WITH([gio],
+    [AS_HELP_STRING([--with-gio],
+        [Use Gconf to store preferences])],
+        [],
+        [with_gio=check])
+AS_IF([test "x$with_gio" != xno], 
+    [PKG_CHECK_MODULES(GIO,[gio-2.0],[GIO_DEFINES="-DGIO_ENABLED" AC_DEFINE([GIO_ENABLED],[1],[Define to 1 if you have GIO support])],)
+    AC_SUBST(GIO_DEFINES)
+    AC_SUBST(GIO_CFLAGS)
+    AC_SUBST(GIO_LIBS)
+    ])
+    
 PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.95 dbus-glib-1 >= 0.70])
 AC_SUBST(DBUS_CFLAGS)
 AC_SUBST(DBUS_LIBS)
